<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    android:gravity="center_horizontal"
    android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center|center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgCoba"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/lblProgressInitDb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/deskripsi"
                android:textColor="#000000"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:text="@string/dev_by"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="96dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengembang"
                android:textColor="#000000"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pembimbing"
                android:textColor="#000000"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kaprodi"
                android:textColor="#000000"
                android:gravity="center" />

            <Button
                android:id="@+id/btnShowCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/telu" />
        </LinearLayout>

</ScrollView>