<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2ecc71"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/atasKiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriFauna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_biru"
            android:src="@drawable/kategori_fauna" />

        <TextView
            android:id="@+id/lblCautionDictionary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fauna"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/atasKanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriFlora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_hijau_tua"
            android:src="@drawable/kategori_flora" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flora"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bawahKiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/atasKiri"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/atasKiri"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriMataUang"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_merah"
            android:src="@drawable/kategori_mata_uang" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mata_uang"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bawahKanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/atasKanan"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/atasKanan"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriBudaya"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_brown"
            android:src="@drawable/kategori_budaya" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budaya"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>