<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f1c40f"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/atasKiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriRumah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_biru"
            android:src="@drawable/kategori_rumah" />

        <TextView
            android:id="@+id/lblCautionDictionary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rumah"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/atasKanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriSekolah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_hijau_tua"
            android:src="@drawable/kategori_sekolah" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sekolah"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bawahKiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/atasKiri"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/atasKiri"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriSosial"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_merah"
            android:src="@drawable/kategori_sosial" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sosial"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>
    
    <!-- <LinearLayout
        android:id="@+id/bawahKanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/atasKanan"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/atasKanan"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnKategoriFasilitasUmum"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_image_brown"
            android:src="@drawable/kategori_fasilitas_umum" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fasilitas_umum"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout> -->

</RelativeLayout>